Configurado espaçamento entre divs do conteúdo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body class="home">
         <div id="container">
+            <!--*Início topo-->
             <div id="topo">
                 <h1 class="logo"></h1>
                 <ul id="navegacao">
@@ -34,9 +35,22 @@
                         <a id="fotos" href="fotos.html">Fotos</a>
                     </li>
                 </ul>
-            </div>
+            </div><!--*Fim /topo-->
+            <!--*Início conteúdo-->
+            <div id="conteudo">
+                <div id="primario">Primário</div>
+                <div id="secundario">Secundário</div>
+                <div id="lateral">Lateral</div>
+
+            </div><!--*Fim /conteúdo-->
             
         </div>
 
+        <!--*Início rodapé-->
+        <div id="container-rodape" style="clear: both;">
+            <div id="rodape">
+                &copy; Copyright 2000-2022 Notícias Cidades <!--*&copy; -> exibe o símbolode copiright-->
+            </div>
+        </div><!--*Fim /rodapé-->
     </body>
 </html>
