--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Site Cidades</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
-    <body class="home">
+    <body id="tres-colunas" class="home">
         <div id="container">
             <!--*Início topo-->
             <div id="topo">
@@ -38,9 +38,31 @@
             </div><!--*Fim /topo-->
             <!--*Início conteúdo-->
             <div id="conteudo">
-                <div id="primario">Primário</div>
-                <div id="secundario">Secundário</div>
-                <div id="lateral">Lateral</div>
+                <div id="primario">
+                    <div class="caixa">
+                        <h2>Entrevistas</h2>
+                        <div class="caixa-conteudo">
+                            conteúdo
+                        </div>
+                    </div>
+                </div>
+                <div id="secundario">
+                    <div class="caixa">
+                        <h2>Entrevistas</h2>
+                        <div class="caixa-conteudo">
+                            conteúdo
+                        </div>
+                    </div>    
+                </div>
+                <!--*Início conteúdo lateral-->
+                <div id="lateral">
+                    <div class="caixa">
+                        <h2>Entrevistas</h2>
+                        <div class="caixa-conteudo">
+                            conteúdo
+                        </div>
+                    </div>
+                </div><!--*Fim /conteúdo lateral-->
 
             </div><!--*Fim /conteúdo-->
             
