--- a/index.html
+++ b/index.html
@@ -39,20 +39,30 @@
             <!--*Início conteúdo-->
             <div id="conteudo">
                 <div id="primario">
-                    <div class="caixa">
-                        <h2>Entrevistas</h2>
+                    <div class="caixa destaque">
+                        <h2>Destaques</h2>
                         <div class="caixa-conteudo">
-                            conteúdo
+                            <h3>Nova Legislação</h3>
+                            <img class="imagem-principal" src="imagens/taxi.jpg" width=100%>
+                            <p>
+                                It has survived not only five centuries, but also the leap into.
+                            </p>
+                            <a href="">Lei mais!</a>                            
                         </div>
                     </div>
                 </div>
                 <div id="secundario">
-                    <div class="caixa">
-                        <h2>Entrevistas</h2>
+                    <div class="caixa entrevista">
+                        <h2>Última entrevista</h2>
                         <div class="caixa-conteudo">
-                            conteúdo
+                            <h3>Entrevista com Felipe Silva</h3>
+                            <img class="imagem-principal" src="imagens/doutor.jpg" width=100%>
+                            <p>
+                                It has survived not only five centuries, but also the leap into.
+                            </p>
+                            <a href="">Lei mais!</a>                            
                         </div>
-                    </div>    
+                    </div>   
                 </div>
                 <!--*Início conteúdo lateral-->
                 <div id="lateral">
