Finalização do site

--- a/brasil.html
+++ b/brasil.html
@@ -7,7 +7,7 @@
         <title>Site Cidades</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
-    <body id="tres-colunas" class="home">
+    <body id="duas-colunas" class="brasil">
         <div id="container">
             <!--*Início topo-->
             <div id="topo">
@@ -94,62 +94,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="secundario">
-                    <div class="caixa entrevista">
-                        <h2>Última entrevista</h2>
-                        <div class="caixa-conteudo">
-                            <h3>Entrevista com Felipe Silva</h3>
-                            <img class="imagem-principal" src="imagens/doutor.jpg" width=100%>
-                            <p>
-                                It has survived not only five centuries, but also the leap into.
-                            </p>
-                            <a href="">Lei mais!</a>                            
-                        </div>
-                    </div>
-                    <div class="caixa">
-                        <h2>Notícias Recentes</h2>
-                        <div class="caixa-conteudo">
-                            <ul id="lista-noticias">
-                                <li>
-                                    <a href="">
-                                        <img src="imagens/cidade.jpg" width="80">
-                                        <h3>Novas Tecnologias</h3>
-                                        <p>
-                                            It has survived not only five centuries, but also the ...
-                                        </p>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="imagens/taxi.jpg" width="80">
-                                        <h3>Novas Tecnologias</h3>
-                                        <p>
-                                            It has survived not only five centuries, but also the ...
-                                        </p>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="imagens/tecnologia.jpg" width="80">
-                                        <h3>Novas Tecnologias</h3>
-                                        <p>
-                                            It has survived not only five centuries, but also the ...
-                                        </p>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="">
-                                        <img src="imagens/doutor.jpg" width="80">
-                                        <h3>Novas Tecnologias</h3>
-                                        <p>
-                                            It has survived not only five centuries, but also the ...
-                                        </p>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>   
-                </div>
+                
                 <!--*Início conteúdo lateral-->
                 <div id="lateral">
                     <div class="caixa">
