--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <p>
                                 It has survived not only five centuries, but also the leap into.
                             </p>
-                            <a href="">Lei mais!</a>                            
+                            <a href="nova-legislacao.html">Lei mais!</a>                            
                         </div>
                     </div>
                     <div class="caixa">
